# AI-Project-Synthesizer

./: .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  ALL_TASKS_COMPLETE.md  CHANGELOG.md  COMPLETION_STATUS.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  CURRENT_PLAN.md  DEPLOYMENT_READY.txt  FEATURES.md  FINALIZATION_REPORT.md  LICENSE  Makefile  PROJECT_STATUS.md  QUICK_START.md  README.md  README_broken.md  RELEASE_NOTES_v2.0.0.md  SECURITY.md  SETUP.md  TODO.md  ai-project-synthesizer-gap-audit-2025-12-11.md  ai-project-synthesizer-gap-closure.md  compass_artifact_wf-46b44a69-9eb6-4781-8d28-0385e9e6bfc1_text_markdown (1).md  finalize.ps1  fix_dependency_scanner.py  fix_imports.py  kaggle.txt  pip_audit_report.txt  pyproject.toml  pytest.ini  quick_start.py  requirements-dev.txt  requirements.txt  self_heal.py  start_voice_chat.py  test_assistant.py  (+11 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  resume_work.md
.github/workflows/: auto-fix.yml  ci.yml  coverage.yml  dependabot-auto-merge.yml  release.yml  security.yml  self-healing-ci.yml  test-suite.yml
config/: default.yaml  lmstudio_mcp_config.json  mcp_claude_desktop.json  mcp_windsurf.json  settings.json
docker/: Dockerfile  docker-compose.yml
docker/n8n/: docker-compose.yml
docs/: AGENT_DEFINITIONS.md  AGENT_FRAMEWORK_INTEGRATION.md  API_REFERENCE.md  AUTONOMOUS_VIBE_CODER_VISION.md  CI_CD_GUIDE.md  CLI_AUTOMATION_SPEC.md  CODEBASE_AUDIT_REPORT.md  DASHBOARD.md  DEVELOPER_GUIDE.md  ENHANCED_TOOLS_INTEGRATION.md  ENHANCEMENT_AUDIT_REPORT.md  ENTERPRISE_DEPLOYMENT.md  IMPLEMENTATION_ROADMAP.md  LLM_ROUTING_STRATEGY.md  MASTER_ACTION_PLAN.md  MASTER_ACTION_PLAN_v2.md  MASTER_ACTION_PLAN_v3.md  MASTER_ACTION_PLAN_v4.md  MASTER_CHECKLIST.md  MCP_CLIENT_SUPPORT.md  MCP_SETUP_GUIDE.md  MEMORY_LEARNING_SYSTEM.md  MODEL_QUICK_START.md  N8N_AUTOGEN_BRIDGE.md  N8N_WORKFLOWS.md  OPS_QUICKSTART.md  PLUGINS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS_ACTION_PLAN.md  PROFESSIONAL_TESTING_STRATEGY.md  PROJECT_STATUS.md  ROADMAP.md  SECURITY_AUDIT_REPORT.md  TESTING_IMPLEMENTATION_SUMMARY.md  USER_GUIDE.md  VIBE_CODING_AUTOMATION.md  WORKFLOW_EXAMPLES.md  WORK_IN_PROGRESS.md  api-reference.md  architecture.md  (+7 more)
docs/api/: API_REFERENCE.md
docs/architecture/: ARCHITECTURE.md
docs/audits/: ai-project-synthesizer-final-audit-155682a.md  ai-project-synthesizer-full-gap-plan.md
docs/blueprints/: TECHNICAL_BLUEPRINTS.md
docs/diagrams/: DIAGRAMS.md
docs/guides/: CLI_REFERENCE.md  CONFIGURATION.md  DEVELOPER_ONBOARDING.md  DEVELOPMENT.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/migration/: migration-summary.md  windsurf-vibe-migration.md
docs/status/: COMPLETION_SUMMARY.md  FINAL_AUDIT_REPORT.md  FINAL_STATUS.txt  FINAL_STATUS_2025_12_11.md  GAP_ANALYSIS_FINAL.md  PRODUCTION_CHECKLIST.md  REMAINING_TASKS.md
examples/: README.md  ml-api-demo.md  web-scraper-demo.md
recipes/: README.md  mcp-server-starter.yaml  rag-chatbot.yaml  schema.json  web-scraper.yaml
reports/: gap_analysis_20251211_063207.md  gap_analysis_20251211_063729.md
scripts/: assemble_project.py  auto_repair_ci.py  check_project_status.py  dev.ps1  feature_inventory.md  feature_inventory.py  finalize.ps1  gap_check.py  generate_test_durations.py  generate_tests.bat  generate_tests.ps1  generate_tests.py  rapid_test_generator.py  run_test_generator.py  setup.ps1  setup.sh  setup_mcp_clients.ps1  start_automation.py  start_with_lmstudio.ps1  test_runner.py  test_template.py  update_security.ps1  validate_docs.py
scripts/enterprise_test_generator/: __init__.py  analyzer.py  generator.py  parallel_runner.py  templates.py
src/: __init__.py  cli.py
src/agents/: __init__.py  autogen_integration.py  automation_agent.py  base.py  code_agent.py  code_fixer_agent.py  crewai_integration.py  framework_router.py  langgraph_integration.py  research_agent.py  swarm_integration.py  synthesis_agent.py  voice_agent.py
src/analysis/: __init__.py  ast_parser.py  code_extractor.py  compatibility_checker.py  dependency_analyzer.py  quality_scorer.py
src/assistant/: __init__.py  core.py  proactive_research.py
src/automation/: __init__.py  browser_client.py  coordinator.py  metrics.py  testing.py
src/cli_executor/: __init__.py  agent_interface.py  error_recovery.py  executor.py
src/core/: __init__.py  auto_repair.py  cache.py  circuit_breaker.py  config.py  exceptions.py  gap_analyzer.py  health.py  hotkey_manager.py  lifecycle.py  logging.py  memory.py  observability.py  plugins.py  realtime.py  resource_manager.py  safe_formatter.py  security.py  security_utils.py  settings_manager.py  telemetry.py  version.py
src/dashboard/: __init__.py  agent_routes.py  app.py  memory_routes.py  settings_routes.py  webhook_routes.py
src/discovery/: __init__.py  base_client.py  firecrawl_client.py  firecrawl_enhanced.py  github_client.py  gitlab_client.py  gitlab_enhanced.py  huggingface_client.py  kaggle_client.py  unified_search.py
src/generation/: __init__.py  diagram_generator.py  readme_generator.py
src/llm/: __init__.py  litellm_router.py  lmstudio_client.py  ollama_client.py  pydantic_ai_agent.py  router.py
tests/: conftest.py  run_all_tests.py  run_integration_tests.py  test_agents.py  test_automation_metrics.py  test_automation_testing.py  test_cli_executor.py  test_core_functionality.py  test_core_memory.py  test_core_realtime.py  test_dashboard_routes.py  test_edge_cases.py  test_edge_cases_mcp.py  test_hotkey_manager.py  test_mcp_functional.py  test_mcp_server.py  test_mcp_smoke.py  test_settings_manager.py  test_synthesis_integration.py  test_tui.py  test_voice_manager.py  test_workflows.py
tools/: extract_elevenlabs_voices.py  voice_cloning_minimal.py  voice_cloning_pipeline.py
(+227 files in other folders)
