[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-project-synthesizer"
version = "2.0.0"
description = "Intelligent multi-repository code synthesis platform for Windsurf IDE"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Ghenghis", email = "ghenghis@users.noreply.github.com"}
]
keywords = [
    "mcp",
    "windsurf",
    "code-synthesis",
    "repository",
    "automation",
    "llm",
    "ai"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # MCP Server
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    
    # Platform APIs
    "ghapi>=1.0.0",
    "python-gitlab>=4.0.0",
    "huggingface-hub>=0.20.0",
    "kaggle>=1.6.0",
    "arxiv>=2.1.0",
    "semanticscholar>=0.8.0",
    # paperswithcode-client removed - incompatible with typer>=0.12.0
    
    # AST Parsing & Analysis
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "libcst>=1.1.0",
    "ast-grep-cli>=0.20.0",
    
    # Dependency Resolution
    "pipdeptree>=2.23.0",
    "pip-tools>=7.4.0",
    "deptry>=0.16.0",
    
    # Git Operations
    "GitPython>=3.1.0",
    "git-filter-repo>=2.38.0",
    
    # LLM
    "ollama>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "langchain>=0.2.0",
    "langchain-ollama>=0.1.0",
    
    # Documentation Generation
    # Note: readme-ai removed - not compatible with Python 3.13
    
    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-split>=0.8.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "pytest-rerunfailures>=14.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-toml>=0.10.0",
    "types-PyYAML>=6.0.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0",
    "aioresponses>=0.7.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
ai-synthesizer = "src.cli:main"
synth = "src.cli:main"

[project.urls]
Homepage = "https://github.com/Ghenghis/AI-Project-Synthesizer"
Documentation = "https://github.com/Ghenghis/AI-Project-Synthesizer/tree/master/docs"
Repository = "https://github.com/Ghenghis/AI-Project-Synthesizer"
Issues = "https://github.com/Ghenghis/AI-Project-Synthesizer/issues"
Changelog = "https://github.com/Ghenghis/AI-Project-Synthesizer/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hatch
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "C901",   # too complex
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "ghapi.*",
    "tree_sitter.*",
    "libcst.*",
    "ollama.*",
    "kaggle.*",
    "arxiv.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "-ra",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
parallel = true
branch = true
source = ["src"]
relative_files = true  # Essential for combining from different machines
concurrency = ["multiprocessing", "thread"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/generated/*",
]

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "def __repr__",
    "raise AssertionError",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true
precision = 2
